force-app/main/default/objects/Pricebook_Details__c/Pricebook_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will hold the record type name and respective price book</description>
    <label>Opportunity Re Engineering Details</label>
</CustomObject>