force-app/main/default/objects/Pricebook_Details__c/fields/ASP_Override_Admin_Profile_s__c.field-meta.xml
<CustomField>
    <fullName>ASP_Override_Admin_Profile_s__c</fullName>
    <description>Profile Names allowed to see editable ASP Override field. Semi colon separated. System Administrators are automatically allowed</description>
    <inlineHelpText>Profile Names allowed to see editable ASP Override field. Semi colon separated. System Administrators are automatically allowed.</inlineHelpText>
    <label>ASP Override Admin Profile(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>