force-app/main/default/objects/Pricebook_Details__c/fields/ASP_Override_Admin_User_s__c.field-meta.xml
<CustomField>
    <fullName>ASP_Override_Admin_User_s__c</fullName>
    <description>Usernames semicolon separated. These users will be able to see Editable ASP Override field.</description>
    <inlineHelpText>Usernames semicolon separated. These users will be able to see Editable ASP Override field.</inlineHelpText>
    <label>ASP Override Admin User(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>