force-app/main/default/objects/Pricebook_Details__c/fields/family__c.field-meta.xml
<CustomField>
    <fullName>family__c</fullName>
    <description>This fields holds the product family defined for each record type.</description>
    <inlineHelpText>This fields holds the product family defined for each record type.</inlineHelpText>
    <label>family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>