force-app/main/default/objects/Pricebook_Details__c/fields/Guidelines_link__c.field-meta.xml
<CustomField>
    <fullName>Guidelines_link__c</fullName>
    <label>Guidelines link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>