force-app/main/default/objects/Pricebook_Details__c/fields/Guidlines_link__c.field-meta.xml
<CustomField>
    <fullName>Guidlines_link__c</fullName>
    <description>This field contains the Guidelines Link for Tegra Auto OEM and Tegra Tier1 Opportunities.</description>
    <inlineHelpText>This field contains the Guidelines Link for Tegra Auto OEM and Tegra Tier1 Opportunities.</inlineHelpText>
    <label>Guidlines link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>