force-app/main/default/objects/Pricebook_Details__c/fields/Help_Url__c.field-meta.xml
<CustomField>
    <fullName>Help_Url__c</fullName>
    <description>This field contains Help URL on the right side of page for each record type.</description>
    <inlineHelpText>This field contains Help URL on the right side of page for each record type.</inlineHelpText>
    <label>Help Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>