force-app/main/default/objects/Pricebook_Details__c/fields/Layout_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Layout_Modified_Date__c</fullName>
    <description>This field is used to maintain updation of pagelayout for each recordtype</description>
    <inlineHelpText>This field is used to maintain updation of pagelayout for each recordtype</inlineHelpText>
    <label>Layout Modified Date</label>
    <type>DateTime</type>
</CustomField>