force-app/main/default/objects/Pricebook_Details__c/fields/Message_to_Select_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Message_to_Select_Quarter__c</fullName>
    <description>This field is used to show message on a vf page to select quarter.</description>
    <inlineHelpText>This field is used to show message on a vf page to select quarter.</inlineHelpText>
    <label>Message to Select Quarter</label>
    <type>TextArea</type>
</CustomField>