force-app/main/default/objects/Pricebook_Details__c/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <description>This field contains the Price Book name defined for each record type.</description>
    <inlineHelpText>This field contains the Price Book name defined for each record type.</inlineHelpText>
    <label>Pricebook Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>