force-app/main/default/objects/Pricebook_Details__c/fields/Product_Pageblock_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Pageblock_Section_Name__c</fullName>
    <label>Product Pageblock Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>