force-app/main/default/objects/Pricebook_Details__c/fields/Quarter_PageBlock_Section__c.field-meta.xml
<CustomField>
    <fullName>Quarter_PageBlock_Section__c</fullName>
    <label>Quarter PageBlock Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>