force-app/main/default/objects/Pricebook_Details__c/fields/Read_Only_Fields__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_Fields__c</fullName>
    <description>This field contains list of field names which are read only for each record type.</description>
    <inlineHelpText>This field contains list of field names which are read only for each record type.</inlineHelpText>
    <label>Read Only Fields</label>
    <type>TextArea</type>
</CustomField>