force-app/main/default/objects/Pricebook_Details__c/fields/Show_ASP_Override__c.field-meta.xml
<CustomField>
    <fullName>Show_ASP_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set it to true, for showing ASP Override editable field (only Enterprise Internal ones though)</description>
    <inlineHelpText>Set it to true, for showing ASP Override editable field (only Enterprise Internal ones though)</inlineHelpText>
    <label>Show ASP Override</label>
    <type>Checkbox</type>
</CustomField>