force-app/main/default/objects/Pricebook_Details__c/fields/ShowASP__c.field-meta.xml
<CustomField>
    <fullName>ShowASP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a check box field which will tells enabling and disabling of ASP field  for a record type.</description>
    <inlineHelpText>This is a check box field which will tells enabling and disabling of ASP field  for a record type.</inlineHelpText>
    <label>ShowASP</label>
    <type>Checkbox</type>
</CustomField>