force-app/main/default/objects/Pricebook_Details__c/fields/ShowRevenue__c.field-meta.xml
<CustomField>
    <fullName>ShowRevenue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a check box field which will tells enabling and disabling of Revenue field  for a record type.</description>
    <inlineHelpText>This is a check box field which will tells enabling and disabling of Revenue field  for a record type</inlineHelpText>
    <label>ShowRevenue</label>
    <type>Checkbox</type>
</CustomField>