force-app/main/default/objects/Pricebook_Details__c/fields/Training_Deck_Url__c.field-meta.xml
<CustomField>
    <fullName>Training_Deck_Url__c</fullName>
    <description>This field holds the TRaining URL for Tegra Auto OEM and Tegra Tier1 Opportunities.</description>
    <inlineHelpText>This field holds the TRaining URL for Tegra Auto OEM and Tegra Tier1 Opportunities.</inlineHelpText>
    <label>Training Deck Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>